Fix: overflow steps

--- a/src/app/sistema/configuracion/configuracion/registro/registro.component.scss
+++ b/src/app/sistema/configuracion/configuracion/registro/registro.component.scss
@@ -6,3 +6,7 @@
     background-color: #64748b;
     border-color: #64748b;
 }
+
+:host ::ng-deep p-steps nav {
+    overflow: auto !important;
+}
